@@ -1,4 +1,5 @@
 version 1.0 - XX-Jun-2011
+. [NEW] TextureCache: Added dumpCachedTextureInfo method. Shows the RAM used by the cached textures (issue #1154)
 . [FIX] Templates: Supports spaces in project name (issue #1158)
 . [FIX] TextureCache: Textures are autoreleased to prevent a crash in multi-threading environments
 . [FIX] TMX Maps: Consume less memory (only what is needed), faster loading times (issue #1175)
@@ -11,7 +12,7 @@ version 1.0-rc2 - 03-May-2011
 . [NEW] Tests: Added test case for bug 1159
 . [FIX] Particles: TTL is always >= 0.
 . [FIX] Particles: texture coordinates are being used correctly when texture is NPOT.
-. [FIX] Scheduler: Fixed possible crash when unscheduling a sibling
+. [FIX] Scheduler: Fixed possible crash when unscheduling a sibling (issue #1144)
 . [FIX] Templates: Use NS_BLOCK_ASSERTIONS and NDEBUG in Release Mode to remove asserts
 . [FIX] Templates: Xcode 3 templates fixed. Removed unused files in cocos2d lib. Added missing files from TouchJSON
 . [FIX] Templates: ARMv6 devices uses "none" autorotation to improve speed
